Add balances and transfers
