# docs/openapi-spec.yaml
@@ -8,6 +8,91 @@ servers:
   - url: http://localhost:8080/api/v1
     description: Local development server
 
+components:
+  schemas:
+    Transfer:
+      type: object
+      properties:
+        transfer_timestamp:
+          type: string
+          description: Timestamp of the asset transfer.
+        anchor_tx_hash:
+          type: string
+          description: Hash of the anchor transaction.
+        anchor_tx_height_hint:
+          type: integer
+          description: Anchor transaction height hint.
+        anchor_tx_chain_fees:
+          type: string
+          description: Fees for the anchor transaction.
+        inputs:
+          type: array
+          items:
+            $ref: '#/components/schemas/TransferInput'
+          description: Inputs used in the transfer.
+        outputs:
+          type: array
+          items:
+            $ref: '#/components/schemas/TransferOutput'
+          description: Outputs from the transfer.
+        anchor_tx_block_hash:
+          type: object
+          additionalProperties: true
+          description: Block hash of the anchor transaction.
+
+    TransferInput:
+      type: object
+      properties:
+        anchor_point:
+          type: string
+          description: The old/current location of the Taproot Asset commitment spent as input.
+        asset_id:
+          type: string
+          description: The ID of the asset spent.
+        script_key:
+          type: string
+          description: The script key of the asset spent.
+        amount:
+          type: string
+          description: The amount of the asset spent.
+
+    TransferOutput:
+      type: object
+      properties:
+        anchor:
+          type: object
+          description: The anchor details of the transfer output.
+        script_key:
+          type: string
+          description: Script key of the output.
+        script_key_is_local:
+          type: boolean
+          description: Indicates if the script key is local.
+        amount:
+          type: string
+          description: The amount in the output.
+        new_proof_blob:
+          type: string
+          description: Proof blob for the new asset.
+        split_commit_root_hash:
+          type: string
+          description: Hash of the split commit root.
+        output_type:
+          type: string
+          description: The type of the output.
+        asset_version:
+          type: string
+          description: Version of the asset.
+        lock_time:
+          type: string
+          description: Lock time for the output.
+        relative_lock_time:
+          type: string
+          description: Relative lock time for the output.
+        proof_delivery_status:
+          type: string
+          description: Status of the proof delivery.
+
 paths:
   /wallet/connect:
     post:
@@ -42,6 +127,55 @@ paths:
                     description: JWT token for authorization
         '401':
           description: Unauthorized
+
+  /wallet/balances:
+    get:
+      summary: Get wallet asset balances
+      description: Retrieve the current asset balances for all assets in the wallet.
+      responses:
+        '200':
+          description: Successful response with asset balances
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  asset_balances:
+                    type: object
+                    additionalProperties:
+                      type: object
+                      properties:
+                        asset_genesis:
+                          type: object
+                          description: Details about the genesis of the asset.
+                          properties:
+                            genesis_point:
+                              type: string
+                              description: The outpoint where the asset was first created, in the form `{txid}:{vout}`.
+                            name:
+                              type: string
+                              description: The name of the asset.
+                            meta_hash:
+                              type: string
+                              description: A hash of any additional metadata linked to the asset.
+                            asset_id:
+                              type: string
+                              description: The unique identifier of the asset.
+                            asset_type:
+                              type: string
+                              enum: [NORMAL, COLLECTIBLE]
+                              description: The type of asset (either a normal asset or a collectible).
+                            output_index:
+                              type: integer
+                              description: The index of the output in the genesis transaction.
+                        balance:
+                          type: string
+                          description: The current balance of the asset in the wallet.
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+
 
     /wallet/send/decode:
       post:
@@ -143,62 +277,52 @@ paths:
           description: Internal Server Error
 
     /wallet/send/complete:
-      post:
-        summary: Complete sending an asset
-        security:
-          - bearerAuth: []
-        requestBody:
-          required: true
+    post:
+      summary: Complete sending an asset
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                psbt:
+                  type: string
+                  description: The signed PSBT hex.
+              required:
+                - psbt
+      responses:
+        '200':
+          description: Asset transfer completed successfully
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  psbt:
-                    type: string
-                    description: The signed PSBT hex
-                required:
-                  - psbt
-        responses:
-          '200':
-            description: Asset transfer completed successfully
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    transfer_timestamp:
-                      type: string
-                      description: Timestamp of the asset transfer
-                    anchor_tx_hash:
-                      type: string
-                      description: Hash of the anchor transaction
-                    anchor_tx_height_hint:
-                      type: integer
-                      description: Anchor transaction height hint
-                    anchor_tx_chain_fees:
-                      type: string
-                      description: Fees for the anchor transaction
-                    inputs:
-                      type: array
-                      items:
-                        type: object
-                        additionalProperties: true
-                      description: Inputs used in the transfer
-                    outputs:
-                      type: array
-                      items:
-                        type: object
-                        additionalProperties: true
-                      description: Outputs from the transfer
-                    anchor_tx_block_hash:
-                      type: object
-                      additionalProperties: true
-                      description: Block hash of the anchor transaction
-          '401':
-            description: Unauthorized
-          '500':
-            description: Internal Server Error
+                $ref: '#/components/schemas/Transfer'
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+
+  /wallet/transfers:
+    get:
+      summary: Retrieve asset transfer history
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of asset transfers
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transfer'
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
 
   /wallet/receive:
     post:
